# MN2022

./: .gitignore  README.md
tp1/: README.md
tp1/exp/: Experimentacion.ipynb  graficos.ipynb
tp1/exp/.ipynb_checkpoints/: Experimentacion-checkpoint.ipynb  graficos-checkpoint.ipynb
tp1/exp/entradas/: entrada1.txt  entradaAntesRefinamiento.txt  entradaNE.txt  entradaNormal.txt  entradaPeligrosa.txt  entradaPrecisa.txt  entradaPrecisaBackup.txt  entradaPrecisaPeligrosa.txt  entradaPrecisaPeligrosaBackup.txt  entradaPrecisaTuneo.txt  entradaPrecisaVariosM.txt  entradaPrecisaVariosMBackup.txt  entradaRefinamiento.txt
tp1/exp/salidas/: salida1.txt  salida19.txt  salida20.txt  salida6.txt  salidaAntesRefinamiento.txt  salidaNE.txt  salidaNormal.txt  salidaNumericErrors.txt  salidaPeligrosa.txt  salidaPrecisa.txt  salidaPrecisaConRefinamiento.txt  salidaPrecisaPeligrosa.txt  salidaRefinamiento.txt  salidaSNE.txt  salidaTuneo.txt  salidaTuneoUnaIt.txt  salidaVariosM.txt  salidaVariosMPeligrosa.txt  salidasinNumericErrors.txt
tp1/exp/testEGvsLU/: results2_20220413_193315.json  results2_20220417_213019.json  results2_20220417_220323.json  results2_20220503_185408.json  results2_n16_m8_ninst1_500_20220414_082028.json  results3_20220417_165137.json  results3_20220503_190203.json  results3_n16_m16_ninst1_500_20220414_093346.json  results4_20220503_201715.json  results4_n32_m16_ninst1_200_20220414_204659.json  results5_20220503_215437.json  results_20220411_001242.json
tp1/scripts/: runBenchmark.py
tp1/src/: BackwardSustitution.h  BenchmarkEGvsLU.cpp  CMakeLists.txt  CMakeSettings.json  FPType.h  FileHelper.h  FindIsotherm.h  FindIsothermNumericError.h  ForwardSubstitution.h  GaussianElimination.h  LUFactorization.h  Main.cpp  MatrixN.h  Parameters.h  VectorN.h
tp1/src/make/: BenchmarkEGvsLU  CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  tp1  tp1NumericErrors  tp1Test  tp1Test[1]_include.cmake  tp1Test[1]_tests.cmake
tp1/src/tests/: AluTests.cpp  BackwardSustitutionTest.cpp  FindIsothermTest.cpp  ForwardSubstitutionTest.cpp  GaussianEliminationTest.cpp  LUFactorizationTest.cpp  MatrixNTest.cpp  VectorNTest.cpp  inputTest1.txt
tp2/: CMakeLists.txt  README.md  requirements.txt
tp2/libocr/: PCA.cpp  PCA.h  powerIteration.h  randVector.cpp  randVector.h
tp2/mn/: DistanceMetric.h  PCA.cpp  PCA.h  Weights.h  kNNClassifier.cpp  kNNClassifier.h  powerIteration.cpp  powerIteration.h
tp2/mnpy/: bindings.cpp
tp2/scripts/: analisis.ipynb  experimento1.ipynb  experimento2.ipynb  experimento3.pkl  experimento3AccuracyVsInstancias.ipynb  experimento4variandoKfold.pkl  experimento4variarKFold.ipynb  experimento5kproporcional.ipynb  experimento5kproporcional.pkl  metnum.py  reader.py  search_best_params.pkl  search_best_paramsSoloKNN.pkl  sklearn.ipynb  testmnpy.py  train.py  training.ipynb
tp2/tests/: PCATests.cpp  kNNClassifierTests.cpp  powerIterationTests.cpp
tp3/: README.md  requirements.txt
tp3/data/: synthData.csv  synthData2.csv
tp3/src/: Parametros.ipynb  Parametros2.ipynb  dataset.ipynb  genData.py  genData2.py  loess.ipynb  loess.py  synthData.ipynb  synthData2.ipynb  tp3.py  weightFunctions.ipynb
tp3/src/.ipynb_checkpoints/: loess-checkpoint.ipynb  synthData-checkpoint.ipynb
